sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:16: error: value += is not a member of Int
      if (getCouleurJoueur(i,j) != -1) nbJoueursParCouleur(getCouleurJoueur(i,j)) += 1;
                                                                                  ^SelectBaseball:25: error: not found: value origPos
  deplacerTrou(origPos, 0, 1);
               ^